--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -280,7 +280,7 @@ iframe {
     margin: 0;
     padding: 0;
     border: none;
-    opacity: 0.6;
+    opacity: 1;  /* 0.6 */
 }
 
 #other {
@@ -1244,10 +1244,9 @@ function openIceCoderWin() {
 
     //if (ICEcoderWin == undefined) alert("undefined");
     //else alert ("OK");
-
     //ICEcoderWin = window.open('/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/', "editor", 'width=1200,height=640,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=100,top=50', true);
 
-openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor","");
+//openOnce("/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/ICEcoder2/", "editor","");
 
 }  
   
@@ -2192,6 +2191,21 @@ $path_sound=file_get_contents($proj_dir."/.sound");
 echo $path_sound;
 $path_sound = str_replace("\\", "\\\\", $path_sound);
 ?><br/>
+
+
+<table width="100%">
+  <tr>
+    <td><hr /></td>
+    <td style="width:1px; padding: 0 10px; white-space: nowrap;"><img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload" />&nbsp;<strong>Codiad</strong></td>
+    <td><hr /></td>
+  </tr>
+</table>
+
+
+<iframe src="/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/Codiad/" width="100%" height="600px" ></iframe>
+
+
+
 <script>
 
 
@@ -2232,6 +2246,7 @@ function tick_ftime_check() {
 
 
 
+
 <table width="100%">
   <tr>
     <td><hr /></td>
@@ -2242,7 +2257,8 @@ function tick_ftime_check() {
 
 
 <iframe src="/doc/upload/index.html?dir=<?php echo $dir_loc; ?>" width="100%" height="600px" ></iframe>
-                                          <!-- class="crop" -->
+										  
+										  
 <div id="message5sec" >
 <script>
 var w=window.innerWidth;
