commit for frequent_copy_paste project from LAPTOP-7KQRMTC0

--- a/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
@@ -113,6 +113,7 @@ var arr_admin = // each line: ['string value to be copied with newlines', 'strin
     ['San Jose', 'San Jose'], 
     ['Mikhael Lerman', 'Mikhael Lerman'], 
     ['michael_lerman@yahoo.com', 'michael_lerman@yahoo.com'],
+    ['mikhaell@xilinx.com', 'mikhaell@xilinx.com'],
     ['408-978-2232', '408-978-2232'], 
     ['2462 Booksin Ave &#10;San Jose CA 95125', '2462 Booksin Ave San Jose CA 95125'], 
     ['2462 Booksin Ave', '2462 Booksin Ave'], 
