--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2202,7 +2202,7 @@ $path_sound = str_replace("\\", "\\\\", $path_sound);
 </table>
 
 
-<iframe src="/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/Codiad/" width="100%" height="600px" ></iframe>
+<iframe src="/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/Codiad/?name=<?php echo $prjname; ?>&path=<?php echo $proj_dir; ?>" width="100%" height="600px" ></iframe>
 
 
 
