commit for common project from LAPTOP-7KQRMTC0

--- a/common/open-command-prompt-here.html
+++ b/common/open-command-prompt-here.html
@@ -2354,7 +2354,10 @@ document.write(result);
 <script>
 var str10="";
 </script>
-<a href="/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/" target="chartime" onclick="javascript:void window.open('/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/','1481656702602','width=800,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=600,top=50');return false;"><img src="/doc/images/copyclip.png" title="frequent copy paste" onmouseover="customAlertRight(str10,'10000','50','300')" /></a><br/><br/>
+<a href="/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/" target="chartime" onclick="javascript:void window.open('/doc/files/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/','1481656702602','width=800,height=500,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=600,top=50');return false;"><img src="/doc/images/copyclip.png" title="frequent copy paste" onmouseover="customAlertRight(str10,'10000','50','300')" /></a>
+<div id="prevclip">none</div>
+<br/>
+
 <img src="/doc/images/refresh.gif" onclick="location.reload(true);" style="cursor:pointer" title="Reload" /><br/><br/>
 <?php
 
