commit for frequent_copy_paste project from LAPTOP-7KQRMTC0

--- a/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
@@ -126,12 +126,10 @@ var arr_admin = // each line: ['string value to be copied with newlines', 'strin
     ['STMicroelectronics', 'STMicroelectronics'],
     ['http://checkthisresume.com', 'http://checkthisresume.com'],
     ['https://www.linkedin.com/in/getme/', 'https://www.linkedin.com/in/getme/'],
+    ['https://twitter.com/manestate', 'https://twitter.com/manestate'],
     ['https://github.com/mlerman', 'https://github.com/mlerman'],
     ['http://ntmio.com/showcase', 'http://ntmio.com/showcase'],
-    ['Please consider my application for this position and give me the opportunity to talk about my experience. http://checkthisresume.com', 'Please consider... Cover letter'],
-    ['Thank you for the connection. Please vote for my idea.', 'Thank you for the connection. Please vote for my idea.'],
-    ['Hello, I saw you on the create the future design contest. Would you consider voting for Netmory?&#10;&#10;https://contest.techbriefs.com/2017/entries/electronics-sensors-iot/7630-0512-025221-netmory', 'Hello, I saw you on the create the future design contest...'],
-    ['Bonjour, Je vous ai vu sur create the future design contest. Pourriez vous voter pour Netmory?&#10;&#10;https://contest.techbriefs.com/2017/entries/electronics-sensors-iot/7630-0512-025221-netmory', 'Bonjour, Je vous ai vu sur create the future design contest...']
+    ['Please consider my application for this position and give me the opportunity to talk about my experience. http://checkthisresume.com', 'Please consider... Cover letter']
     ];
 	
 var arr_of_arr = 
