commit for frequent_copy_paste project from DESKTOP-MCQS4FT

--- a/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
@@ -108,13 +108,16 @@ var arr_php = // each line: ['string value to be copied with newlines', 'string 
 var arr_admin = // each line: ['string value to be copied with newlines', 'string to be shown'],
     [ 
     ['95125', '95125'], 
+    ['Indeed', 'Indeed'], 
     ['Mikhael', 'Mikhael'], 
     ['Lerman', 'Lerman'], 
     ['San Jose', 'San Jose'], 
     ['Mikhael Lerman', 'Mikhael Lerman'], 
     ['michael_lerman@yahoo.com', 'michael_lerman@yahoo.com'],
+    ['celine_lerman@yahoo.com', 'celine_lerman@yahoo.com'],
     ['mikhaell@xilinx.com', 'mikhaell@xilinx.com'],
     ['408-978-2232', '408-978-2232'], 
+    ['408-564-9578', '408-564-9578'], 
     ['2462 Booksin Ave &#10;San Jose CA 95125', '2462 Booksin Ave San Jose CA 95125'], 
     ['2462 Booksin Ave', '2462 Booksin Ave'], 
     ['miky est stupide ', 'stupid blancs'],
