--- a/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
+++ b/Engineering/ENVIRONMENT/PHP_SERVER/frequent_copy_paste/index.html
@@ -187,11 +187,12 @@ document.write("<table width='100%'><tr><td><a href='#batch'>Batch</a></td><td><
 var strid="";
 
 
-var rearrange_order = [0, 1, 2, 3, 4, 5, 6];	//ok
+var rearrange_order = [];	//ok
 //var rearrange_order = [1, 2, 3, 4, 5, 6, 0];	// OK
 //var rearrange_order = [2, 4, 6, 0, 5, 1, 3];	// OK
 
 rearrange_order = JSON.parse(localStorage.getItem("rearrange_order"));
+if(rearrange_order==null) rearrange_order = [0, 1, 2, 3, 4, 5, 6];
 
 //alert(rearrange_order);
 
